--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
                     <li><a href="#estrutura-administrativa">Estrutura Administrativa</a></li>
                     <li><a href="#eventos">Eventos</a></li>
                     <li>
+                        <a href="#">Secretaria>
+                        <ul class="sub-menu">
+                            <li><a href="#Espor">Esporte</a></li>
+                            <li><a href="#interior">Interior</a></li>
+                            <li><a href="#prefeitura">Fazenda</a></li>
+                            <li><a href="#Planeja">Planejamento</a></li>
+                            <li><a href="#Cultura">Cultura</a></li>
+                            <li><a href="#Gabinete">Gabinete</a></li>
+                            <li><a href="#Saúde">Saúdee</a></li>
+                            <li><a href="#Educa">Educação</a></li>
+                            <li><a href="#Assis">Assistencia Social</a></li>
+                            <li><a href="#Agro">Agricultura</a></li>
+                            <li><a href="#Infra">Infra Estrutura</a></li>
+                            <li><a href="#Meio_A">Meio Ambiente</a></li>
+                        </ul>
+                    </li>
+                    <li>
                         <a href="#">Município</a>
                         <ul class="sub-menu">
                             <li><a href="#dados_oficiais">Dados Oficiais</a></li>
