--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><a href="#estrutura-administrativa">Estrutura Administrativa</a></li>
                     <li><a href="#eventos">Eventos</a></li>
                     <li>
-                        <a href="#">Secretaria>
+                        <a href="#">Secretaria</a>
                         <ul class="sub-menu">
                             <li><a href="#Espor">Esporte</a></li>
                             <li><a href="#interior">Interior</a></li>
