--- a/index.html
+++ b/index.html
@@ -114,13 +114,16 @@
         </div>
     </main>
     <footer>
+        <p class="footer-logo">
+            <a href="#"><img src="img/imglbr-removebg-preview.png" alt="Logo da Prefeitura" class="footer-img"></a>
+        </p>
         <div class="footer-wrapper">
             <!-- Seção alinhada à esquerda -->
             <div class="footer-info-left">
                 <p>&copy; 2024 Prefeitura Municipal de Labrea</p>
                 <p>Razão Social: Município de Labrea</p>
-                <p>CNPJ: 05830872000109</p>
-                <p>(99) 9999-9999</p>
+                <p>CNPJ: 46.313.714/0001-50</p>
+                <p>(19) 3575-9000</p>
             </div>
     
             <!-- Seção centralizada -->
